# vinylizer

./: .gitignore  pyproject.toml
vinylizer/: Product.py  __main__.py  edit_title.py  emailer.py  ml_exporter.py  picture_handler.py  product_suggestion.py  resume_sheet.py  shopify_exporter.py
